force-app/main/default/objects/AH_Realized_Project_Benefits__c/AH_Realized_Project_Benefits__c.object-meta.xml
<CustomObject>
    <description>NICC-047197
This object is used to measure the benefits that are recognized for the project.</description>
    <label>Realized Benefits</label>
    <nameField>
        <displayFormat>RB-{00000}</displayFormat>
        <label>Benefits Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Realized Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>