force-app/main/default/objects/AH_Realized_Project_Benefits__c/fields/Cost_Reducton_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Reducton_Amount__c</fullName>
    <label>Cost Reducton Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>