force-app/main/default/objects/AH_Realized_Project_Benefits__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>