force-app/main/default/objects/AH_Realized_Project_Benefits__c/fields/Revenue_Increase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Increase_Amount__c</fullName>
    <label>Revenue Increase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>