force-app/main/default/objects/AH_Realized_Project_Benefits__c/fields/Workstream_Name__c.field-meta.xml
<CustomField>
    <fullName>Workstream_Name__c</fullName>
    <businessOwnerUser>aylan.henderson@amadeus.com</businessOwnerUser>
    <description>NICC-054810</description>
    <label>Workstream Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amadeus_Hospitality_Workstreams</valueSetName>
    </valueSet>
</CustomField>